{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 891,
  "lineage": "74d0115a-5950-84f7-0b18-8bb43167d853",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "backend-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0c6c18143c24e1b82",
            "id": "rtb-0c6c18143c24e1b82",
            "owner_id": "773114618884",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.128.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0115cc04eb849071d"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "frontend-route-table"
            },
            "vpc_id": "vpc-064aaa81873df0179"
          },
          "dependencies": [
            "aws_vpc.backend-vpc",
            "aws_vpc.frontend-vpc",
            "aws_vpc_peering_connection.frontend-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "frontend-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-08601a39c1793b755",
            "id": "rtb-08601a39c1793b755",
            "owner_id": "773114618884",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3ac3f21774e8648",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.129.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0115cc04eb849071d"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "frontend-route-table"
            },
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_internet_gateway.frontend-internet-gateway",
            "aws_vpc.backend-vpc",
            "aws_vpc.frontend-vpc",
            "aws_vpc_peering_connection.frontend-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-backend-sec-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:security-group/sg-0733edf6e7534a6e9",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0733edf6e7534a6e9",
            "ingress": [],
            "name": "default",
            "owner_id": "773114618884",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-064aaa81873df0179"
          },
          "dependencies": [
            "aws_vpc.backend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-fronted-sec-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:security-group/sg-054e60b41e47a4dfc",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054e60b41e47a4dfc",
            "ingress": [],
            "name": "default",
            "owner_id": "773114618884",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend-eip-az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08587f9f8447ff66f",
            "public_dns": "ec2-52-65-62-139.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.65.62.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "nat-gw-eip-az1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.backend-subnet",
            "aws_vpc.backend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend-eip-az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ad7eec2d92e0c9fd",
            "public_dns": "ec2-3-106-158-212.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.106.158.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "nat-gw-eip-az2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.backend-subnet",
            "aws_vpc.backend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend-eip-az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d108200e7db2580e",
            "public_dns": "ec2-13-237-162-85.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.237.162.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "nat-gw-eip-az3"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.backend-subnet",
            "aws_vpc.backend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion-host-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.128.0.254",
            "association_id": "eipassoc-058b3619ae47d8669",
            "domain": "vpc",
            "id": "eipalloc-0fa3db5f7b27aa1dc",
            "instance": "i-08418d4d95970c155",
            "network_interface": "eni-0d09be5ba0c3e555b",
            "private_dns": "ip-10-128-0-254.ap-southeast-2.compute.internal",
            "private_ip": "10.128.0.254",
            "public_dns": "ec2-13-236-75-174.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.236.75.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "bastion"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_security_group.default-fronted-sec-group",
            "aws_instance.bastion-host",
            "aws_internet_gateway.frontend-internet-gateway",
            "aws_security_group.allow-restricted-ssh",
            "aws_subnet.frontend-subnet",
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "frontend-web-elb",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1a4d97d4af3009b",
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:instance/i-08418d4d95970c155",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08418d4d95970c155",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d09be5ba0c3e555b",
            "private_dns": "ip-10-128-0-254.ap-southeast-2.compute.internal",
            "private_ip": "10.128.0.254",
            "public_dns": "ec2-13-236-75-174.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.236.75.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fda11dabfe94fbfe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04123ced969fface6",
            "tags": {
              "Environment": "dev",
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054e60b41e47a4dfc",
              "sg-0f3797efe239b5229"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-fronted-sec-group",
            "aws_security_group.allow-restricted-ssh",
            "aws_subnet.frontend-subnet",
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-host",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "az1",
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1a4d97d4af3009b",
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:instance/i-0df951431a6956b1e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df951431a6956b1e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbeb0518691453ed",
            "private_dns": "ip-10-128-0-215.ap-southeast-2.compute.internal",
            "private_ip": "10.128.0.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09d8de77e84cf309b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04123ced969fface6",
            "tags": {
              "Environment": "dev",
              "Name": "web-az1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054e60b41e47a4dfc",
              "sg-0c6168f838cbff1c4",
              "sg-0f2644c1487d81bfc"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-fronted-sec-group",
            "aws_instance.bastion-host",
            "aws_security_group.allow-bastion-frontend-ssh",
            "aws_security_group.allow-frontend-web",
            "aws_subnet.frontend-subnet"
          ]
        },
        {
          "index_key": "az2",
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1a4d97d4af3009b",
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:instance/i-0d94fae7670ab3c10",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d94fae7670ab3c10",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-037c5f722858e5235",
            "private_dns": "ip-10-128-4-79.ap-southeast-2.compute.internal",
            "private_ip": "10.128.4.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ce30919bc22bd383",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d992fdf3efab475",
            "tags": {
              "Environment": "dev",
              "Name": "web-az2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054e60b41e47a4dfc",
              "sg-0c6168f838cbff1c4",
              "sg-0f2644c1487d81bfc"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-fronted-sec-group",
            "aws_instance.bastion-host",
            "aws_security_group.allow-bastion-frontend-ssh",
            "aws_security_group.allow-frontend-web",
            "aws_subnet.frontend-subnet"
          ]
        },
        {
          "index_key": "az3",
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1a4d97d4af3009b",
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:instance/i-09f325ad6e43d2a72",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f325ad6e43d2a72",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b0d17bed5379c9a7",
            "private_dns": "ip-10-128-8-98.ap-southeast-2.compute.internal",
            "private_ip": "10.128.8.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c3888fd95b892721",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d3b3281c0ff7068",
            "tags": {
              "Environment": "dev",
              "Name": "web-az3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054e60b41e47a4dfc",
              "sg-0c6168f838cbff1c4",
              "sg-0f2644c1487d81bfc"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-fronted-sec-group",
            "aws_instance.bastion-host",
            "aws_security_group.allow-bastion-frontend-ssh",
            "aws_security_group.allow-frontend-web",
            "aws_subnet.frontend-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "frontend-internet-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a3ac3f21774e8648",
            "owner_id": "773114618884",
            "tags": {
              "Environment": "dev",
              "Name": "frontend-internet-gateway"
            },
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-backend-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:security-group/sg-0da4f11a5bce695de",
            "description": "allow-backend-web",
            "egress": [],
            "id": "sg-0da4f11a5bce695de",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.128.0.0/22",
                  "10.129.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.128.0.0/22",
                  "10.129.0.0/22"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-backend-web",
            "name_prefix": null,
            "owner_id": "773114618884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "allow-backend-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-064aaa81873df0179"
          },
          "dependencies": [
            "aws_vpc.backend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-bastion-backend-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:security-group/sg-05c44cbe88aa012a4",
            "description": "allow-bastion-backend-ssh",
            "egress": [],
            "id": "sg-05c44cbe88aa012a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.128.0.254/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-bastion-backend-ssh",
            "name_prefix": null,
            "owner_id": "773114618884",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-064aaa81873df0179"
          },
          "dependencies": [
            "aws_vpc.backend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-bastion-frontend-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:security-group/sg-0f2644c1487d81bfc",
            "description": "allow-bastion-frontend-ssh",
            "egress": [],
            "id": "sg-0f2644c1487d81bfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.128.0.254/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-bastion-frontend-ssh",
            "name_prefix": null,
            "owner_id": "773114618884",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-frontend-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:security-group/sg-0c6168f838cbff1c4",
            "description": "allow-frontend-web",
            "egress": [],
            "id": "sg-0c6168f838cbff1c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.128.0.0/22",
                  "10.129.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.128.0.0/22",
                  "10.129.0.0/22"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-frontend-web",
            "name_prefix": null,
            "owner_id": "773114618884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "allow-frontend-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-public-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:security-group/sg-0a4d5c604fd134fc5",
            "description": "allow-public-web",
            "egress": [],
            "id": "sg-0a4d5c604fd134fc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-public-web",
            "name_prefix": null,
            "owner_id": "773114618884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "allow-public-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-restricted-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:security-group/sg-0f3797efe239b5229",
            "description": "allow-restricted-ssh",
            "egress": [],
            "id": "sg-0f3797efe239b5229",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-restricted-ssh",
            "name_prefix": null,
            "owner_id": "773114618884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "allow-restricted-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-backend-web",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.128.0.0/22",
              "10.129.0.0/22"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1220453638",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0da4f11a5bce695de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-backend-web",
            "aws_vpc.backend-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.128.0.0/22",
              "10.129.0.0/22"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3699551707",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0da4f11a5bce695de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-backend-web",
            "aws_vpc.backend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-bastion-backend-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.128.0.254/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2517113243",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05c44cbe88aa012a4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-bastion-backend-ssh",
            "aws_vpc.backend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-bastion-frontend-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.128.0.254/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2571053657",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f2644c1487d81bfc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-bastion-frontend-ssh",
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-frontend-web",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.128.0.0/22",
              "10.129.0.0/22"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4037726345",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6168f838cbff1c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-frontend-web",
            "aws_vpc.frontend-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.128.0.0/22",
              "10.129.0.0/22"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1089869048",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6168f838cbff1c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-frontend-web",
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-public-web",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1194525473",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4d5c604fd134fc5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-public-web",
            "aws_vpc.frontend-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3015008664",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4d5c604fd134fc5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-public-web",
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-restricted-ssh",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2107698392",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f3797efe239b5229",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-restricted-ssh",
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend-subnet",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:subnet/subnet-07c83cc83e619af4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.129.0.0/24",
            "id": "subnet-07c83cc83e619af4d",
            "map_public_ip_on_launch": false,
            "owner_id": "773114618884",
            "tags": {
              "Environment": "dev",
              "Name": "backend-subnet-a"
            },
            "vpc_id": "vpc-064aaa81873df0179"
          },
          "dependencies": [
            "aws_vpc.backend-vpc"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:subnet/subnet-02d6134e2c0250ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.129.4.0/24",
            "id": "subnet-02d6134e2c0250ce5",
            "map_public_ip_on_launch": false,
            "owner_id": "773114618884",
            "tags": {
              "Environment": "dev",
              "Name": "backend-subnet-b"
            },
            "vpc_id": "vpc-064aaa81873df0179"
          },
          "dependencies": [
            "aws_vpc.backend-vpc"
          ]
        },
        {
          "index_key": "az3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:subnet/subnet-002a1f4b07075821f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.129.8.0/24",
            "id": "subnet-002a1f4b07075821f",
            "map_public_ip_on_launch": false,
            "owner_id": "773114618884",
            "tags": {
              "Environment": "dev",
              "Name": "backend-subnet-c"
            },
            "vpc_id": "vpc-064aaa81873df0179"
          },
          "dependencies": [
            "aws_vpc.backend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend-subnet",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:subnet/subnet-04123ced969fface6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.128.0.0/24",
            "id": "subnet-04123ced969fface6",
            "map_public_ip_on_launch": false,
            "owner_id": "773114618884",
            "tags": {
              "Environment": "dev",
              "Name": "frontend-subnet-a"
            },
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:subnet/subnet-04d992fdf3efab475",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.128.4.0/24",
            "id": "subnet-04d992fdf3efab475",
            "map_public_ip_on_launch": false,
            "owner_id": "773114618884",
            "tags": {
              "Environment": "dev",
              "Name": "frontend-subnet-b"
            },
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        },
        {
          "index_key": "az3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:subnet/subnet-06d3b3281c0ff7068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.128.8.0/24",
            "id": "subnet-06d3b3281c0ff7068",
            "map_public_ip_on_launch": false,
            "owner_id": "773114618884",
            "tags": {
              "Environment": "dev",
              "Name": "frontend-subnet-c"
            },
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "backend-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:vpc/vpc-064aaa81873df0179",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.129.0.0/16",
            "default_network_acl_id": "acl-0bebf347a28ebd967",
            "default_route_table_id": "rtb-0c6c18143c24e1b82",
            "default_security_group_id": "sg-0733edf6e7534a6e9",
            "dhcp_options_id": "dopt-e885938a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-064aaa81873df0179",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c6c18143c24e1b82",
            "owner_id": "773114618884",
            "tags": {
              "Environment": "dev",
              "Name": "backend-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "frontend-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:773114618884:vpc/vpc-0a32427350f9e25a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/16",
            "default_network_acl_id": "acl-09522b99054bfa4f5",
            "default_route_table_id": "rtb-08601a39c1793b755",
            "default_security_group_id": "sg-054e60b41e47a4dfc",
            "dhcp_options_id": "dopt-e885938a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a32427350f9e25a1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08601a39c1793b755",
            "owner_id": "773114618884",
            "tags": {
              "Environment": "dev",
              "Name": "frontend-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "frontend-backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0115cc04eb849071d",
            "peer_owner_id": "773114618884",
            "peer_region": "ap-southeast-2",
            "peer_vpc_id": "vpc-064aaa81873df0179",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "frontend-backend-peering"
            },
            "vpc_id": "vpc-0a32427350f9e25a1"
          },
          "dependencies": [
            "aws_vpc.backend-vpc",
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    }
  ]
}